HelloUltraviolet/Fixtures/RejectedSource/Polymorphism/ImplementationDefaultMethodSignatureMismatch/Expected.uv
//! Expected diagnostic metadata for the ImplementationDefaultMethodSignatureMismatch rejected-source specimen.

expectedDiagnostic("E-TYP-2503", "rule.14.Impl-Sig-Err-Concrete")
